# Aura-lab-

./: .env.example  .gitignore  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  run-aura.ps1  server.ts  storage.rules  vercel.json  vite.config.ts
.github/workflows/: build-electron.yml  build-win.yml
components/ui/: badge.tsx  dialog.tsx  progress.tsx  scroll-area.tsx  slider.tsx  sonner.tsx  tabs.tsx
electron/: main.cjs  preload.cjs  preload.js
public/: manifest.json
scripts/: download-sql.js  setup_tauri.sh
src/: App.tsx  firebase.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ColorBalance.tsx  CropOverlay.tsx  ExportModal.tsx  Filmstrip.tsx  Histogram.tsx  LightingControls.tsx  PhotoCanvas.tsx
src/constants/: presets.ts
src/hooks/: useLocalStore.ts  useRAWProcessor.ts
src/lib/: db.ts  imageProcessing.ts  lrParser.ts  rawProcessor.ts  shaders.ts  webglRenderer.ts
src/lib/engine/: ProxyManager.ts
src/services/: geminiService.ts
src/workers/: processor.worker.ts  rawWorker.ts
