[package]
name = "aura-lab"
version = "1.3.1"
description = "Aura Lab - Professional Photo Editor"
authors = ["Aura Lab Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-all", "system-tray", "updater", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Strip fatal errors for smaller binary
codegen-units = 1
lto = true
opt-level = "s" # Optimize for size
strip = true
